# LexDanNet

./: README.md  main.py  pyproject.toml  sample_config.py
diagrams/: missing_in_workflow.puml
src/models/: __init__.py  form.py  lexeme.py  part_of_speech.py
